tests/nonstrict_import/nonstrict_import.exp
Error -------------------------------------------------------------------------------------------------- cycle_b.js:5:14

Dependencies of a `@flow strict` module must also be `@flow strict`! (`nonstrict-import`)

   5| import type {N} from './cycle_a.js'; // Error
                   ^


Error --------------------------------------------------------------------------------------------------- imports.js:4:9

Dependencies of a `@flow strict` module must also be `@flow strict`! (`nonstrict-import`)

   4| import {FooObj} from './nonstrict_exports.js'; // Error
              ^^^^^^


Error --------------------------------------------------------------------------------------------------- imports.js:5:1

Dependencies of a `@flow strict` module must also be `@flow strict`! (`nonstrict-import`)

   5| import * as All from './nonstrict_exports.js'; // Error
      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^


Error --------------------------------------------------------------------------------------------------- imports.js:8:8

Dependencies of a `@flow strict` module must also be `@flow strict`! (`nonstrict-import`)

   8| import BarObj from './nonstrict_exports.js'; // Error
             ^^^^^^


Error ------------------------------------------------------------------------------------------------- imports.js:11:17

Dependencies of a `@flow strict` module must also be `@flow strict`! (`nonstrict-import`)

   11| const BarObj2 = require("./nonstrict_exports"); // Error
                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^


Error -------------------------------------------------------------------------------------------------- imports.js:20:8

Dependencies of a `@flow strict` module must also be `@flow strict`! (`nonstrict-import`)

   20| import NonstrictLib from './nonstrict_lib.js'; // Error
              ^^^^^^^^^^^^


Error ------------------------------------------------------------------------------------------------- imports.js:27:14

Dependencies of a `@flow strict` module must also be `@flow strict`! (`nonstrict-import`)

   27| import type {S} from './nonstrict_exports.js'; // Error
                    ^


Error ------------------------------------------------------------------------------------------------- imports.js:31:16

Dependencies of a `@flow strict` module must also be `@flow strict`! (`nonstrict-import`)

   31| import typeof {FooObj as FooObjType} from './nonstrict_exports.js'; // Error
                      ^^^^^^



Found 8 errors
